Add testing code